--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <nav id="navbar" class="navbar nav-menu">
       <ul>
         <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+        <li><a href="#translate" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Translate</span></a></li>
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Translate</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        <li><a href="#sugest_a_song" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Sugest a Song</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -65,8 +65,22 @@
 
   <main id="main">
 
+    <!-- ======= Resume Section ======= -->
+    <section id="translate" class="translate">
+      <div class="container d-flex" data-aos="fade-up">
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="assets/img/maxresdefault.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">I'm Still Standing</h5>
+            <p class="card-text">Elton John</p>
+            <a href="still-standing.html" class="btn btn-primary">Lyrics</a>
+          </div>
+        </div>
+      </div>
+    </section><!-- End Resume Section -->
+
     <!-- ======= About Section ======= -->
-    <section id="about" class="about">
+    <section id="sugest_a_song" class="sugest_a_song">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -81,141 +95,12 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Translate Lyrics / Tradução de Letras</h2>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-6">
-            <h3 class="resume-title">English</h3>
-            <div class="resume-item pb-0">
-              <h4>I'm Still Standing</h4>
-              <h5>Elton John</h5>
-              <p>
-                You could never know what it's like<br>
-                Your blood like winter, freezes just like ice<br>
-                And there's a cold, lonely light that shines from you<br>
-                You'll wind up like the wreck you hide behind that mask you use<br>
-              </p>
-              <p>
-                And did you think this fool could never win?<br>
-                Well, look at me, I'm coming back again<br>
-                I got a taste of love in a simple way<br>
-                And if you need to know, while I'm still standing, you just fade away<br>
-              </p>
-              <p>
-                Don't you know I'm still standing better than I ever did?<br>
-                Looking like a true survivor, feeling like a little kid<br>
-                I'm still standing after all this time<br>
-                Picking up the pieces of my life, without you on my mind<br>
-              </p>
-              <p>
-                I'm still standing, yeah, yeah, yeah<br>
-                I'm still standing, yeah, yeah, yeah<br>
-              </p>
-              <p>
-                Once, I never could hope to win<br>
-                You starting down the road, leaving me again<br>
-                The threats you made were meant to cut me down<br>
-                And if our love was just a circus, you'd be a clown by now<br>
-              </p>
-              <p>
-                No, I'm still standing better than I ever did<br>
-                Looking like a true survivor, feeling like a little kid<br>
-                I'm still standing after all this time<br>
-                Picking up the pieces of my life without you on my mind<br>
-              </p>
-              <p>
-                I'm still standing, yeah, yeah, yeah<br>
-                I'm still standing, yeah, yeah, yeah<br>
-              </p>
-              <p>
-                Don't you know that I'm still standing better than I ever did?<br>
-                Looking like a true survivor, feeling like a little kid<br>
-                I'm still standing after all this time<br>
-                Picking up the pieces of my life without you on my mind<br>
-              </p>
-              <p>
-                I'm still standing, yeah, yeah, yeah<br>
-                I'm still standing, yeah, yeah, yeah<br>
-                I'm still standing, yeah, yeah, yeah<br>
-                I'm still standing, yeah, yeah, yeah<br>
-              </p>
-            </div>
-          </div>
-
-          <div class="col-lg-6">
-            <h3 class="resume-title">Português</h3>
-            <div class="resume-item">
-              <h4>Ainda Estou de Pé</h4>
-              <h5>Elton John</h5>
-              <p>
-                Você nunca vai saber como é<br>
-                Seu sangue é frio como gelo<br>
-                E uma luz fria e solitária emana de você<br>
-                Você vai acabar como os destroços que se escondem atrás da máscara que você usa<br>
-              </p>
-              <p>
-                E você pensou que este idiota nunca ia conseguir?<br>
-                Bem, olhe para mim, estou de volta outra vez<br>
-                Eu provei o amor de um jeito simples<br>
-                E, se você quer saber, enquanto eu estou de pé, você desapareceu<br>
-              </p>
-              <p>
-                Você não sabia que eu ainda estou de pé e melhor do que nunca?<br>
-                Parecendo um verdadeiro sobrevivente, me sentindo como um garotinho<br>
-                Depois de todo esse tempo, eu ainda estou de pé<br>
-                Juntando os pedaços da minha vida sem você na minha mente<br>
-              </p>
-              <p>
-                Ainda estou de pé, sim, sim, sim<br>
-                Ainda estou de pé, sim, sim, sim<br>
-              </p>
-              <p>
-                Houve uma época em que eu não achava que fosse conseguir<br>
-                Você descendo a rua, me deixando de novo<br>
-                As ameaças que você me fez eram para acabar comigo<br>
-                E se o nosso amor fosse como um circo, você seria o palhaço agora<br>
-              </p>
-              <p>
-                Não, eu ainda estou de pé melhor do que nunca<br>
-                Parecendo um verdadeiro sobrevivente, me sentindo como um garotinho<br>
-                Depois de todo esse tempo, eu ainda estou de pé<br>
-                Juntando os pedaços da minha vida sem você na minha mente<br>
-              </p>
-              <p>
-                Ainda estou de pé, sim, sim, sim<br>
-                Ainda estou de pé, sim, sim, sim<br>
-              </p>
-              <p>
-                Você não sabia que eu ainda estou de pé e melhor do que nunca?<br>
-                Parecendo um verdadeiro sobrevivente, me sentindo como um garotinho<br>
-                Depois de todo esse tempo, eu ainda estou de pé<br>
-                Juntando os pedaços da minha vida sem você na minha mente<br>
-              </p>
-              <p>
-                Ainda estou de pé, sim, sim, sim<br>
-                Ainda estou de pé, sim, sim, sim<br>
-                Ainda estou de pé, sim, sim, sim<br>
-                Ainda estou de pé, sim, sim, sim<br>
-              </p>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End Resume Section -->
-
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Contact</h2>
+          <h2>Sugest a Song</h2>
         </div>
 
         <div class="row mt-1">
@@ -250,10 +135,7 @@
                 </div>
               </div>
               <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="Name of the song" required>
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
@@ -277,6 +159,12 @@
     <div class="container">
       <h3>Trans Beyond</h3>
       <p>Onde as palavras se tornam música e a música se torna compreensível para todos.</p>
+      <div class="d-flex">
+        <a href="#hero" class="bold margin"><i class="bx bx-home"></i> <span>Home</span></a>
+        <a href="#translate" class="bold margin"><i class="bx bx-file-blank"></i> <span>Translate</span></a>
+        <a href="#about" class="bold margin"><i class="bx bx-user"></i> <span>About</span></a>
+        <a href="#sugest_a_song" class="bold "><i class="bx bx-envelope"></i> <span>Sugest a Song</span></a>
+      </div>
       <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
       </div>
