--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -68,6 +74,22 @@
     <!-- ======= Resume Section ======= -->
     <section id="translate" class="translate">
       <div class="container d-flex" data-aos="fade-up">
+        <div class="card" style="width: 18rem; margin-right: 2rem;">
+          <img class="card-img-top" src="assets/img/maxresdefault.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">I'm Still Standing</h5>
+            <p class="card-text">Elton John</p>
+            <a href="still-standing.html" class="btn btn-primary">Lyrics</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem; margin-right: 2rem;">
+          <img class="card-img-top" src="assets/img/maxresdefault.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">I'm Still Standing</h5>
+            <p class="card-text">Elton John</p>
+            <a href="still-standing.html" class="btn btn-primary">Lyrics</a>
+          </div>
+        </div>
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" src="assets/img/maxresdefault.jpg" alt="Card image cap">
           <div class="card-body">
