--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </section><!-- End Resume Section -->
 
     <!-- ======= About Section ======= -->
-    <section id="sugest_a_song" class="sugest_a_song">
+    <section id="about" class="about">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -118,7 +118,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <section id="sugest_a_song" class="sugest_a_song">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
