--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Trans Beyond</h1>
+      <h1><img class="logo" src="assets/img/transbeyond-logo-1.png" alt=""></h1>
       <p><span class="typed" data-typed-items="Lyrics, Music, Translate, Language"></span></p>
     </div>
   </section><!-- End Hero -->
@@ -164,7 +164,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button class="button" type="submit">Send Message</button></div>
             </form>
 
           </div>
@@ -179,7 +179,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Trans Beyond</h3>
+      <h3><img class="logo" src="assets/img/transbeyond-logo-3.png" alt=""></h3>
       <p>Onde as palavras se tornam música e a música se torna compreensível para todos.</p>
       <div class="d-flex">
         <a href="#hero" class="bold margin"><i class="bx bx-home"></i> <span>Home</span></a>
